Nights interspersed during travel by carriage state.